# holidays-ru

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs
src/: data.rs  date.rs  day_flags.rs  lib.rs  official.rs  predict.rs  range.rs  raw_date.rs  resolved.rs
src/data/: masks.rs  months_macro.rs  y1993.rs  y1994.rs  y1995.rs  y1996.rs  y1997.rs  y1998.rs  y1999.rs  y2000.rs  y2001.rs  y2002.rs  y2003.rs  y2004.rs  y2005.rs  y2006.rs  y2007.rs  y2008.rs  y2009.rs  y2010.rs  y2011.rs  y2012.rs  y2013.rs  y2014.rs  y2015.rs  y2016.rs  y2017.rs  y2018.rs  y2019.rs  y2020.rs  y2021.rs  y2022.rs  y2023.rs  y2024.rs  y2025.rs  y2026.rs
