[package]
name = "holidays-ru"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hexqnt/holidays-ru"
documentation = "https://docs.rs/holidays-ru"
readme = "README.md"
description = "A library for determining working days, weekends, and holidays in Russia."
keywords = [
    "holidays",
    "russia",
    "calendar",
    "working-days",
    "production-calendar",
]
categories = ["date-and-time", "data-structures"]
include = [
    "src/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
default = []
time = ["dep:time"]
chrono = ["dep:chrono"]
serde = ["dep:serde"]

[dependencies]
time = { version = "0.3", optional = true, default-features = false }
chrono = { version = "0.4", optional = true, default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
time = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false }
serde_json = "1"
